# tg-flutter-build-bot

./: .env.example  .gitignore  Jenkinsfile  README.md  pyproject.toml
src/tg_flutter_build_bot/: __init__.py  bot_manager.py  config.py  main.py  store.py
src/tg_flutter_build_bot/bot/: context.py  filters.py  handlers.py
src/tg_flutter_build_bot/builder/: service.py
src/tg_flutter_build_bot/drive/: uploader.py
src/tg_flutter_build_bot/jenkins/: __init__.py  client.py  webhook.py
src/tg_flutter_build_bot/web/: app.py  routes.py
src/tg_flutter_build_bot/web/templates/: base.html  builds.html  config.html  dashboard.html  oauth.html
