[project]
name = "tg-flutter-build-bot"
version = "0.1.0"
description = "Generic Telegram bot that builds Flutter APKs and uploads to Google Drive"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[ext]>=21.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "google-api-python-client>=2.130.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
tg-flutter-build-bot = "tg_flutter_build_bot.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
