[project]
name = "tg-flutter-build-bot"
version = "0.2.0"
description = "Telegram bot that triggers Jenkins Flutter builds and uploads APKs to Google Drive"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[ext]>=21.0",
    "aiohttp>=3.9.0",
    "google-api-python-client>=2.130.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
tg-flutter-build-bot = "tg_flutter_build_bot.main:cli"

[dependency-groups]
dev = ["mypy>=1.10.0", "ruff>=0.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]

[[tool.mypy.overrides]]
module = ["google_auth_oauthlib.*", "googleapiclient.*"]
ignore_missing_imports = true
